# filetime_from_git

./: pyproject.toml
pelican/plugins/filetime_from_git/: __init__.py
